<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agricola Scorer</string>
    <string name="add_player">Add player</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_add_players">Add Players</string>
    <string name="input_player_name">Input a player name</string>
    <string name="add">Add</string>
    <string name="address_book">Add from address book</string>
    <string name="recent_label">Recent:</string>
    <string name="fields_label">Fields:</string>
    <string name="pastures_label">Pastures:</string>
    <string name="grain_label">Grain:</string>
    <string name="vegetables_label">Vegetables:</string>
    <string name="sheep_label">Sheep:</string>
    <string name="wild_boar_label">Wild boar:</string>
    <string name="cattle_label">Cattle:</string>
    <string name="unused_spaces_label">Unused spaces:</string>
    <string name="fenced_stables_label">Fenced stables:</string>
    <string name="room_type_label">Material:</string>
    <string name="rooms_label">Room count:</string>
    <string name="family_members_label">Family members:</string>
    <string name="points_for_cards_label">Card points:</string>
    <string name="bonus_points_label">Bonus points:</string>
    <string name="begging_cards_label">Begging cards:</string>
    <string name="score_label">Score:</string>
    <string name="wood">Wood</string>
    <string name="clay">Clay</string>
    <string name="stone">Stone</string>
    <string name="finish">Finish</string>
    <string name="save_game">Save game</string>
    <string name="start_again">Start again</string>
    <string name="history">History</string>
    <string name="remove_from_game">Remove from game</string>
    <string name="rename_player">Rename player</string>
    <string name="rename">Rename</string>
    <string name="view_game">Show scores</string>
    <string name="delete_game">Delete game</string>
    <string name="add_player_prompt">Add a player to get started!</string>
    <string name="no_history">No history available. Go play some games!</string>
    <string name="from_player_list">From Player List</string>
    <string name="cannot_rename">Cannot rename!</string>
    <string name="player_already_exists">Can\'t rename to that, that player already exists!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="player_list">Player List</string>
    <string name="in_game_label">(in game)</string>

    <plurals name="games_count">
        <item quantity="one">1 game</item>
        <item quantity="other">%d games</item>
    </plurals>

    <string name="edit_game">Edit game</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>
    <string name="about_text">Agricola Scorer by Craig Fleming (rythos42@gmail.com). Dominican font by www.haroldsfonts.com. Chart icon by blog.twg.ca.</string>
    <string name="search">Search</string>
    <string name="playersLabel">Players:</string>
    <string name="scores">Scores</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="in_bed_family_label">In bed family:</string>
    <string name="horses_label">Horses:</string>
    <string name="expand_all">Expand All</string>
    <string name="collapse_all">Collapse All</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="four_plus">4+</string>
    <string name="five_plus">5+</string>
    <string name="six_plus">6+</string>
    <string name="seven_plus">7+</string>
    <string name="eight_plus">8+</string>
    <string name="zero_to_one">0&#8211;1</string>
    <string name="one_to_two">1&#8211;2</string>
    <string name="one_to_three">1&#8211;3</string>
    <string name="two_to_three">2&#8211;3</string>
    <string name="three_to_four">3&#8211;4</string>
    <string name="four_to_five">4&#8211;5</string>
    <string name="five_to_six">5&#8211;6</string>
    <string name="six_to_seven">6&#8211;7</string>
    <string name="randomize">Randomize</string>
    <string name="action_settings">Settings</string>
    <string name="randomize_player">Starting Player</string>
    <string name="can_not_edit">Can\'t edit game</string>
    <string name="no_detail_scores">You can\'t edit this game because it doesn\'t have any score details!</string>
    <string name="graph_of_scores">Graph of scores</string>
    <string name="search_to_create_graph">Click search to show a graph!</string>
    <string name="search_by_start_date">Search By Start Date</string>
    <string name="search_by_end_date">Search By End Date</string>
    <string name="remove_start_date">Remove start date</string>
    <string name="remove_end_date">Remove end date</string>
    <string name="limit_number_of_players">Limit number of players</string>
    <string name="settings">Settings</string>
    <string name="edit_game_date">Edit game date</string>
    <string name="score_agricola">Score Agricola</string>
    <string name="score_farmers">Score Farmers</string>
    <string name="score_all_creatures">Score All Creatures</string>
    <string name="full_expansion_count_label">Full expansions: </string>
    <string name="building_score_label">Building score: </string>
    <string-array name="game_type_array">
        <item>Agricola</item>
        <item>Farmers of the Moor</item>
        <item>All Creatures</item>
    </string-array>
</resources>