<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/score_footer"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            style="@style/scoreContainer">

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">

            <com.geeksong.agricolascorer.control.SegmentedUnitScoreView
                    android:id="@+id/fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:label="@string/fields_label"
                    custom:segmentCount="5"
                    >
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/zero_to_one" style="@style/fieldsStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/two" style="@style/fieldsStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/three" style="@style/fieldsStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/four" style="@style/fieldsStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/five_plus" style="@style/fieldsStyle"/>
            </com.geeksong.agricolascorer.control.SegmentedUnitScoreView>

            <com.geeksong.agricolascorer.control.SegmentedUnitScoreView
                    android:id="@+id/pastures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fields"
                    custom:label="@string/pastures_label"
                    custom:segmentCount="5"
                    >
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/zero" style="@style/pasturesStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/one" style="@style/pasturesStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/two" style="@style/pasturesStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/three" style="@style/pasturesStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/four_plus" style="@style/pasturesStyle"/>
            </com.geeksong.agricolascorer.control.SegmentedUnitScoreView>

            <com.geeksong.agricolascorer.control.SegmentedUnitScoreView
                    android:id="@+id/grains"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pastures"
                    custom:label="@string/grain_label"
                    custom:segmentCount="5"
                    >
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/zero" style="@style/grainStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/one_to_three" style="@style/grainStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/four_to_five" style="@style/grainStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/six_to_seven" style="@style/grainStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/eight_plus" style="@style/grainStyle"/>
            </com.geeksong.agricolascorer.control.SegmentedUnitScoreView>

            <com.geeksong.agricolascorer.control.SegmentedUnitScoreView
                    android:id="@+id/vegetables"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/grains"
                    custom:label="@string/vegetables_label"
                    custom:segmentCount="5"
                    >
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/zero" style="@style/vegetableStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/one" style="@style/vegetableStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/two" style="@style/vegetableStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/three" style="@style/vegetableStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/four_plus" style="@style/vegetableStyle"/>
            </com.geeksong.agricolascorer.control.SegmentedUnitScoreView>

            <com.geeksong.agricolascorer.control.SegmentedUnitScoreView
                    android:id="@+id/sheep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vegetables"
                    custom:label="@string/sheep_label"
                    custom:segmentCount="5"
                    >
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/zero" style="@style/sheepStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/one_to_three" style="@style/sheepStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/four_to_five" style="@style/sheepStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/six_to_seven" style="@style/sheepStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/eight_plus" style="@style/sheepStyle"/>
            </com.geeksong.agricolascorer.control.SegmentedUnitScoreView>

            <com.geeksong.agricolascorer.control.SegmentedUnitScoreView
                    android:id="@+id/wild_boar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sheep"
                    custom:label="@string/wild_boar_label"
                    custom:segmentCount="5"
                    >
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/zero" style="@style/wildBoarStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/one_to_two" style="@style/wildBoarStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/three_to_four" style="@style/wildBoarStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/five_to_six" style="@style/wildBoarStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/seven_plus" style="@style/wildBoarStyle"/>
            </com.geeksong.agricolascorer.control.SegmentedUnitScoreView>

            <com.geeksong.agricolascorer.control.SegmentedUnitScoreView
                    android:id="@+id/cattle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wild_boar"
                    custom:label="@string/cattle_label"
                    custom:segmentCount="5"
                    >
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/zero" style="@style/cattleStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/one" style="@style/cattleStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/two_to_three" style="@style/cattleStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/four_to_five" style="@style/cattleStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/six_plus" style="@style/cattleStyle"/>
            </com.geeksong.agricolascorer.control.SegmentedUnitScoreView>

            <com.geeksong.agricolascorer.control.SegmentedUnitScoreView
                    android:id="@+id/family_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cattle"
                    custom:label="@string/family_members_label"
                    custom:segmentCount="5"
                    >
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/one" style="@style/familyMemberStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/two" style="@style/familyMemberStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/three" style="@style/familyMemberStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/four" style="@style/familyMemberStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:text="@string/five" style="@style/familyMemberStyle"/>
            </com.geeksong.agricolascorer.control.SegmentedUnitScoreView>

            <com.geeksong.agricolascorer.control.SegmentedUnitScoreView
                    android:id="@+id/room_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/family_members"
                    custom:label="@string/room_type_label"
                    custom:hideScore="true"
                    custom:segmentCount="3"
                    >
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:id="@+id/woodButton" android:text="@string/wood" style="@style/roomTypeStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:id="@+id/clayButton" android:text="@string/clay" style="@style/roomTypeStyle"/>
                <com.geeksong.agricolascorer.control.SegmentedControlButton android:id="@+id/stoneButton" android:text="@string/stone" style="@style/roomTypeStyle"/>
            </com.geeksong.agricolascorer.control.SegmentedUnitScoreView>

            <!-- Invisible element acting as separator -->
            <View
                    android:id="@+id/center_separator"
                    android:layout_width="2dp"
                    android:layout_height="0dp"
                    android:layout_below="@id/room_type"
                    android:layout_centerHorizontal="true"/>

            <!-- Picker row #1 -->
            <com.geeksong.agricolascorer.control.PickerUnitScoreView
                    android:id="@+id/rooms_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/room_type"
                    android:layout_toLeftOf="@id/center_separator"
                    custom:label="@string/rooms_label"
                    />

            <com.geeksong.agricolascorer.control.PickerUnitScoreView
                    android:id="@+id/unused_spaces_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/room_type"
                    android:layout_toRightOf="@id/center_separator"
                    custom:label="@string/unused_spaces_label"
                    />

            <!-- Picker row #2 -->
            <com.geeksong.agricolascorer.control.PickerUnitScoreView
                    android:id="@+id/fenced_stables_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rooms_picker"
                    android:layout_toLeftOf="@id/center_separator"
                    custom:label="@string/fenced_stables_label"
                    />

            <com.geeksong.agricolascorer.control.PickerUnitScoreView
                    android:id="@+id/points_for_cards_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/unused_spaces_picker"
                    android:layout_toRightOf="@id/center_separator"
                    custom:label="@string/points_for_cards_label"
                    />

            <!-- Picker row #3 -->
            <com.geeksong.agricolascorer.control.PickerUnitScoreView
                    android:id="@+id/bonus_points_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fenced_stables_picker"
                    android:layout_toLeftOf="@id/center_separator"
                    custom:label="@string/bonus_points_label"
                    />

            <com.geeksong.agricolascorer.control.PickerUnitScoreView
                    android:id="@+id/begging_cards_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/points_for_cards_picker"
                    android:layout_toRightOf="@id/center_separator"
                    custom:label="@string/begging_cards_label"
                    />

            <!-- Picker row #4 (optional) -->
            <include layout="@layout/agricola_score_player_farmers"
                     android:layout_below="@id/begging_cards_picker"
                     android:visibility="gone"/>

        </RelativeLayout>
    </ScrollView>

    <!-- Footer -->
    <include android:id="@+id/score_footer"
             layout="@layout/score_player_footer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"/>

</RelativeLayout>