<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
    
    <!-- Invisible element acting as separator -->
    <View
            android:id="@+id/center_separator"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

    <!-- Picker row #1 -->
    <com.geeksong.agricolascorer.control.PickerUnitScoreView
            android:id="@+id/sheep_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/center_separator"
            custom:label="@string/sheep_label"
            />

    <com.geeksong.agricolascorer.control.PickerUnitScoreView
            android:id="@+id/wild_boar_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/center_separator"
            custom:label="@string/wild_boar_label"
            />

    <!-- Picker row #2 -->
    <com.geeksong.agricolascorer.control.PickerUnitScoreView
            android:id="@+id/cattle_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sheep_picker"
            android:layout_toLeftOf="@id/center_separator"
            custom:label="@string/cattle_label"
            />

    <com.geeksong.agricolascorer.control.PickerUnitScoreView
            android:id="@+id/horse_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sheep_picker"
            android:layout_toRightOf="@id/center_separator"
            custom:label="@string/horses_label"
            />

    <!-- Picker row #3 -->
    <com.geeksong.agricolascorer.control.PickerUnitScoreView
            android:id="@+id/full_expansion_count_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cattle_picker"
            android:layout_toLeftOf="@id/center_separator"
            custom:label="@string/full_expansion_count_label"
            />

    <com.geeksong.agricolascorer.control.PickerUnitScoreView
            android:id="@+id/building_score_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cattle_picker"
            android:layout_toRightOf="@id/center_separator"
            custom:label="@string/building_score_label"
            />

    <!-- Footer -->
    <include android:id="@+id/score_footer"
             layout="@layout/score_player_footer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"/>

</RelativeLayout>
